# gazebo-ros-docker

./: README.md  debug_gazebo_gui.sh
catkin_ws/src/my_robot_description/: CMakeLists.txt  package.xml
catkin_ws/src/my_robot_description/urdf/: simple_robot.urdf
catkin_ws/src/my_robot_gazebo/: CMakeLists.txt  package.xml
scripts/: full_test.sh  run_simulation.sh  setup_xquartz.sh  teleop.sh
