<?xml version="1.0"?>
<package format="2">
  <name>my_robot_description</name>
  <version>0.1.0</version>
  <description>Robot description package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
</package>